--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
 	// flyway
 	implementation 'org.flywaydb:flyway-core'
+	implementation "org.flywaydb:flyway-mysql"
 
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
