--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ plugins {
 
 group = 'nextstep'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_11
+java.targetCompatibility = JavaVersion.VERSION_11
 
 repositories {
 	mavenCentral()
@@ -34,18 +35,24 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	// flyway
-	implementation 'org.flywaydb:flyway-core'
-	implementation "org.flywaydb:flyway-mysql"
+	implementation 'org.flywaydb:flyway-core:8.5.13'
+	// flyway -> jdbc 의존
+	implementation 'org.postgresql:postgresql:42.5.1'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
 	// r2dbc mysql
-	implementation 'dev.miku:r2dbc-mysql:0.8.2.RELEASE'
+//	implementation 'dev.miku:r2dbc-mysql:0.8.2.RELEASE'
+//	implementation 'com.github.jasync-sql:jasync-r2dbc-mysql:2.1.7'
+
+	// r2dbc postgres
+	implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	// netty dns macos
-	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.79.Final:osx-aarch_64'
+	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.85.Final:osx-aarch_64'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -68,7 +75,7 @@ test {
 // https://github.com/GoogleContainerTools/jib/tree/master/jib-gradle-plugin#quickstart
 jib {
 	from {
-		image = 'openjdk:8-jdk-alpine'
+		image = 'openjdk:11-jdk-alpine'
 		platforms {
 			platform {
 				architecture = 'arm64'
