--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,61 +14,17 @@ spring:
     activate:
       on-profile: local
   r2dbc:
-    master:
-      driver: postgresql
-      host: 127.0.0.1
-      port: 5432
-      user: subway
-      password: subway_password
-      database: subway
-    slave:
-      driver: postgresql
-      host: 127.0.0.1
-      port: 5433
-      user: subway
-      password: subway_password
-      database: subway
-#    pool: # 커넥션 풀 사용
-#      master:
-#        driver: pool
-#        protocol: postgresql
-#        host: localhost
-#        port: 5432
-#        username: subway
-#        password: subway_password
-#        database: subway
-#        connection-timeout: 10s
-#        ssl: false
-#        poolName: master-pool
-#        initial-size: 10
-#        max-size: 50
-#        max-idle-time: 15s
-#        max-life-time: 30s
-#        max-create-connection-time: 3s
-#        max-acquire-time: 4s
-#        acquire-retry: 1
-#        validation-query: select 1
-#        register-jmx: true
-#      slave:
-#        driver: pool
-#        protocol: postgresql
-#        host: localhost
-#        port: 5433
-#        username: subway
-#        password: subway_password
-#        database: subway
-#        connection-timeout: 10s
-#        ssl: false
-#        poolName: slave-pool
-#        initial-size: 10
-#        max-size: 50
-#        max-idle-time: 15s
-#        max-life-time: 30s
-#        max-create-connection-time: 3s
-#        max-acquire-time: 4s
-#        acquire-retry: 1
-#        validation-query: select 1
-#        register-jmx: true
+    url: r2dbc:pool:postgres://127.0.0.1:5432/subway
+    username: subway
+    password: subway_password
+  redis:
+    host: 127.0.0.1
+    port: 7617
+    password: predixy_password
+  data:
+    redis:
+      repositories:
+        enabled: false
   flyway:
     enabled: true
     baseline-on-migrate: true
@@ -85,3 +41,4 @@ logging:
     io.r2dbc.postgresql.PARAM: debug
     io.r2dbc.pool.ConnectionPool: debug
     org.springframework.r2dbc.connection.R2dbcTransactionManager: debug
+    io.lettuce.core.RedisChannelHandler: debug
